--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "drizzle-orm": "^0.32.2",
     "nuxt": "^3.12.4",
     "radix-vue": "^1.9.3",
-    "vue": "latest"
+    "vue": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "drizzle-kit": "^0.23.2"
