--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "drizzle-orm": "^0.32.2",
     "nuxt": "^3.12.4",
     "radix-vue": "^1.9.3",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "vue": "latest",
+    "vue-countup-v3": "^1.4.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
